--- a/dubbo-provider/pom.xml
+++ b/dubbo-provider/pom.xml
@@ -29,6 +29,12 @@
             <artifactId>zkclient</artifactId>
             <version>0.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>amqp-client</artifactId>
+            <version>4.0.2</version>
+        </dependency>
     </dependencies>
 
 </project>
