--- a/mail-service/src/main/resources/application.yml
+++ b/mail-service/src/main/resources/application.yml
@@ -5,6 +5,20 @@ spring:
     username: 18850198317@163.com
     default-encoding: UTF-8
 
+#redis
+  redis:
+    database: 0         # Redis数据库索引（默认为0）
+    host: 8.129.216.97  #ip
+    port: 6379        #端口
+    password: admin   #密码
+    jedis:
+      pool:
+        max-active: 8   # 连接池最大连接数（使用负值表示没有限制）
+        max-wait: 100   # 连接池最大阻塞等待时间（使用负值表示没有限制）
+        max-idle: 8    # 连接池中的最大空闲连接
+        min-idle: 2  # 连接池中的最小空闲连接
+
+
 mail:
   address: 18850198317@163.com
 
@@ -16,3 +30,4 @@ dubbo:
     address: 8.129.216.97:2181
   protocol:
     port: 28801
+
